# voxcraft

./: .gitignore  LICENSE  README.md  config.example.json  plan.md  pyproject.toml
.agents/skills/voxcraft/: SKILL.md
.agents/skills/voxcraft/agents/: openai.yaml
.agents/skills/yt-transcriber-cli/: SKILL.md
.agents/skills/yt-transcriber-cli/agents/: openai.yaml
docs/: architecture.md
src/voxcraft/: chunk.py  clean.py  cli.py  client.py  config.py  download.py  jobs.py  manifest.py  models.py  pipeline.py  qwen_cli.py  server.py  summarize.py  transcribe.py
src/youtube_local_pipeline/: __init__.py  audio.py  clean.py  cli.py  config.py  download.py  manifest.py  models.py  pipeline.py  qwen_cli.py  subtitles.py  summarize.py  transcribe.py  utils.py
tests/: test_cli_client.py  test_client.py  test_pipeline.py  test_server.py
