[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxcraft"
version = "0.1.0"
description = "Local YouTube transcript preparation pipeline for Apple Silicon Macs."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115",
  "mlx-qwen3-asr[diarize]>=0.3.2",
  "pydantic>=2",
  "rich>=13",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
  "webvtt-py",
  "yt-dlp",
]

[project.scripts]
voxcraft = "voxcraft.cli:app"
voxcraft-qwen = "voxcraft.qwen_cli:main"

[dependency-groups]
dev = [
  "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voxcraft"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
